--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "mmap"
     ],
     "author": {
-        "name": "Clemens Akens w/ Luke Moch, Matthew Berryman",
+        "name": "Clemens Akens w/ Luke Moch",
         "email": "lukemochspam@gmail.com",
         "url": "http://github.com/mochman"
     },
